...

const Homepage = () => {
    const Stack = createStackNavigator()

    {/* displays components of home screen (inactive/active sections, navigation tabs)*/}
    return (
        <View testID="homepage">
            <StatusBar barStyle="dark-content" />
            <SafeAreaView>
                <ScrollView
                    contentInsetAdjustmentBehavior="automatic"
                    style={styles.scrollView}>
                    <HeaderBar
                        navigation={Stack}
                        left="Add"
                        leftNav="AddJob"
                        right="Login"
                        rightNav="Login"
                    />

                    {global.HermesInternal == null ? null : (
...
