...
        style={styles.avatar}
        source={{
          uri:
            "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRbMUGNDVN_JkCPn75qh5u1GKYDXcOFnt2xYw&usqp=CAU",
        }}
      />
      <View style={styles.body} testID="login_page">
        <View style={styles.bodyContent}>
          <Text style={styles.name}>{details.name || "N/A"}</Text>
          <Text style={styles.info}>{details.title || "N/A"}</Text>
          <Text style={styles.description}>{details.description || "N/A"}</Text>
        </View>
        <View>
          <TouchableOpacity
            testID="update_profile"
            style={styles.buttonContainer}
            onPress={() => navigation.navigate("UpdateProfile")}
          >
            <Text>Update</Text>
          </TouchableOpacity>
        </View>
...
